[tool.poetry]
name = "auth-blockchain"
version = "0.1.0"
description = ""
authors = ["Wincenty Lech <wincenty.lech@mercadolivre.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
web3 = "^5.25.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
